// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a default blueprint 1`] = `
Object {
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets a key 1`] = `
Object {
  "attributes": Object {
    "key": "$key",
  },
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets a ref 1`] = `
Object {
  "attributes": Object {
    "ref": "$ref",
  },
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets affect 1`] = `
Object {
  "affect": "affect.ref",
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets attributes 1`] = `
Object {
  "attributes": Object {
    "attrs": Object {
      "id": "ID",
    },
  },
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets attributes 2`] = `
Object {
  "attributes": Object {
    "attrs": Object {
      "id": "ID",
      "type": "password",
    },
  },
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets bound classes 1`] = `
Object {
  "attributes": Object {
    ":class": "class.bind",
  },
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets bound props 1`] = `
Object {
  "attributes": Object {
    "props": Array [
      Object {
        ":prop": "prop.ref",
      },
    ],
  },
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets bound props 2`] = `
Object {
  "attributes": Object {
    "props": Array [
      Object {
        ":addProp": "prop.ref",
        ":prop": "prop.ref",
      },
    ],
  },
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets children 1`] = `
Object {
  "id": Any<String>,
  "type": "child",
}
`;

exports[`sets children 2`] = `
Object {
  "id": Any<String>,
  "type": "child2",
}
`;

exports[`sets classes 1`] = `
Object {
  "attributes": Object {
    "class": Array [
      "css-class",
    ],
  },
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets if 1`] = `
Object {
  "0": Object {
    "if": "a === b",
  },
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets loop 1`] = `
Object {
  "id": Any<String>,
  "loop": "loop.ref",
  "type": "test",
}
`;

exports[`sets props 1`] = `
Object {
  "attributes": Object {
    "props": Object {
      "prop": "propValue",
    },
  },
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets props 2`] = `
Object {
  "attributes": Object {
    "props": Object {
      "addProp": "propValue",
      "prop": "propValue",
    },
  },
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets refInFor 1`] = `
Object {
  "attributes": Object {
    "refInFor": true,
  },
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets scoped slots 1`] = `
Object {
  "id": Any<String>,
  "type": "slot",
}
`;

exports[`sets scoped slots 2`] = `
Object {
  "id": Any<String>,
  "type": "slot2",
}
`;

exports[`sets show 1`] = `
Object {
  "0": Object {
    "show": "a === b",
  },
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets styles 1`] = `
Object {
  "attributes": Object {
    "style": Object {
      "color": "black",
    },
  },
  "id": Any<String>,
  "type": "test",
}
`;

exports[`sets text 1`] = `
Object {
  "_bound": false,
  "_content": "Dummy Text",
  "_type": "$text",
  "id": Any<String>,
}
`;
